# raycast-mesh-sample

./: CMakeLists.txt  cameras_example.xml  main.cpp  mesh-resample.pro  tracer.cpp  tracer.h
BVH/: BBox.cpp  BBox.h  BVH.h  IntersectionInfo.h  Log.h  Object.h  Ray.h  Stopwatch.h  vector3.h
scene/: basiccamera.cpp  basiccamera.h  camera.h  scene.cpp  scene.h
scene/shape/: mesh.cpp  mesh.h  triangle.cpp  triangle.h
util/: common.h
