CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(resample)

# Change path if necessary
set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

FIND_PACKAGE(GLM REQUIRED)


FILE(GLOB SOURCES 	
${CMAKE_SOURCE_DIR}/*.cpp 
${CMAKE_SOURCE_DIR}/*.h
${CMAKE_SOURCE_DIR}/BVH/*.cpp 
${CMAKE_SOURCE_DIR}/BVH/*.h
${CMAKE_SOURCE_DIR}/scene/*.cpp 
${CMAKE_SOURCE_DIR}/scene/*.h
${CMAKE_SOURCE_DIR}/scene/shape/*.cpp 
${CMAKE_SOURCE_DIR}/scene/shape/*.h
${CMAKE_SOURCE_DIR}/util/*.cpp 
${CMAKE_SOURCE_DIR}/util/*.h
)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${GLM_LIBRARIES})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
